[package]
name = "ot"
version = "0.1.0"
authors = ["Michele Orrù <michele.orru@ens.fr>"]
keywords = ["cryptography", "curve25519", "oblivious-transfer"]
description = "SimpleOT from Orlandi and Chou in pure-Rust, using curve25519-dalek."

[dependencies]
curve25519-dalek = "1"
rand = "0.6.1"
digest = "0.8.0"
generic-array = "0.12.0"
packed_simd = "0.3.1"
byteorder = "1.2.7"

[dev-dependencies]
criterion = "0.2"
sha3 = "0.8.1"

[patch.crates-io]
criterion = { git = "https://github.com/hdevalence/criterion.rs" }

[[bench]]
name = "ot_benchmarks"
harness = false